--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Doto:wght@100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Prociono&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Slabo+27px&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
- 
+    <link rel="icon" href="assets/logo.jpg" >
   <link rel="stylesheet" href="css/style.css">
   <title>Dash-bord</title>
 </head>
@@ -258,170 +258,6 @@
             </tr>
           </thead>
           <tbody>
-            <!-- <tr>
-              <td>
-                <p>Pristia Candra</p>
-                <p class="email">lincoln@unpixel.com</p>
-              </td>
-              <td>
-                <p>08092139441</p>
-
-              </td>
-              <td>
-                <span> CV.pdf <span class="file-icon"><i class="fa-solid  fa-file-arrow-down"></i></span></span>
-              </td>
-              <td>
-                <p>01 Mar 2023</p>
-              </td>
-              <td>
-                <p>Applied</p>
-
-              </td>
-            
-            </tr>
-            <tr>
-              <td>
-                <p>Hanna Baptista</p>
-                <p class="email">hanna@unpixel.com</p>
-              </td>
-
-              <td>
-                <p>08092139441</p>
-              </td>
-
-              <td> - </td>
-
-              <td>
-                <p>01 Mar 2023</p>
-              </td>
-
-              <td>
-                <p>Screening</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p>Miracle Geidt</p>
-                <p class="email">miracle@unpixel.com</p>
-              </td>
-
-              <td>
-                <p>08092139441</p>
-              </td>
-
-              <td> <span> CV.pdf <span class="file-icon"><i class="fa-solid fa-file-arrow-down"></i></span></span></td>
-
-              <td>
-                <p>01 Mar 2023</p>
-              </td>
-
-              <td>
-                <p>1st Interview</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p>Rayna Torff</p>
-                <p class="email">rayna@unpixel.com</p>
-              </td>
-
-              <td>
-                <p>08092139441</p>
-              </td>
-
-              <td>-</td>
-
-              <td>
-                <p>01 Mar 2023</p>
-              </td>
-
-              <td>
-                <p> 2nd Interview</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p>Giana Lipshutz</p>
-                <p class="email">giana@unpixel.com</p>
-              </td>
-
-              <td>
-                <p>08092139441</p>
-              </td>
-
-              <td>-</td>
-
-              <td>
-                <p>01 Mar 2023</p>
-              </td>
-
-              <td>
-                <p>Hiring</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p> James George</p>
-                <p class="email">james@unpixel.com</p>
-              </td>
-
-              <td>
-                <p>08092139441</p>
-              </td>
-
-              <td> <span> CV.pdf <span class="file-icon"><i class="fa-solid fa-file-arrow-down"></i></span></span></td>
-
-              <td>
-                <p>01 Mar 2023</p>
-              </td>
-
-              <td>
-                <p> Hiring</p>
-              </td>
-            </tr>
-
-
-            <tr>
-              <td>
-                <p>Jordyn George</p>
-                <p class="email">jordyn@unpixel.com</p>
-              </td>
-
-
-              <td>
-                <p>08092139441</p>
-              </td>
-
-              <td> <span> CV.pdf <span class="file-icon"><i class="fa-solid fa-file-arrow-down"></i></span></span></td>
-
-              <td>
-                <p>01 Mar 2023</p>
-              </td>
-
-              <td>
-                <p>Rejected</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <p>Skylar Herwitz</p>
-                <p class="email">skylar@unpixel.com</p>
-              </td>
-
-              <td>
-                <p>08092139441</p>
-              </td>
-
-              <td> <span> CV.pdf <span class="file-icon"><i class="fa-solid fa-file-arrow-down"></i></span></span></td>
-
-              <td>
-                <p>01 Mar 2023</p>
-              </td>
-
-              <td>
-                <p>Screening</p>
-              </td>
-            </tr> -->
           </tbody>
         </table>
       </section>
